appId: com.eatfitai.app
---
- tapOn:
    id: auth-login-email-input
- setClipboard: ${LOGIN_EMAIL}
- pasteText
- tapOn:
    id: auth-login-password-input
- setClipboard: ${LOGIN_PASSWORD}
- pasteText
- hideKeyboard
- tapOn:
    id: auth-login-submit-button
    retryTapIfNoChange: true
- assertVisible:
    id: home-screen
