appId: com.eatfitai.app
---
- launchApp
- runFlow:
    when:
      visible:
        id: auth-intro-start-button
    commands:
      - tapOn:
          id: auth-intro-start-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: auth-welcome-login-button
    commands:
      - tapOn:
          id: auth-welcome-login-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: auth-login-screen
    file: ./login.yaml
- runFlow:
    when:
      visible:
        id: vision-add-meal-screen
    commands:
      - back
- runFlow:
    when:
      visible:
        id: ai-scan-screen
    commands:
      - tapOn:
          id: navigation-home-tab-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: meal-diary-screen
    commands:
      - tapOn:
          id: navigation-home-tab-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: voice-screen
    commands:
      - tapOn:
          id: navigation-home-tab-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: stats-screen
    commands:
      - tapOn:
          id: navigation-home-tab-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: profile-screen
    commands:
      - tapOn:
          id: navigation-home-tab-button
          retryTapIfNoChange: true
- runFlow:
    when:
      visible:
        id: food-search-screen
    commands:
      - back
- extendedWaitUntil:
    timeout: 90000
    visible:
      id: home-screen
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: home-screen
